Fix IE7 content overlapping menubar issue

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -5,6 +5,11 @@
 @baseLineHeight:          14px;
 @blur-radius: 3px;
 
+.content {
+    z-index: -1;
+    position: relative;
+}
+
 .border-radius {
     .border-radius(5px);
 }
